# openapi.yaml
@@ -113,6 +113,28 @@ paths:
         "500":
           $ref: "#/components/responses/InternalServerError"
 
+  /users/me:
+    get:
+      tags:
+        - users
+      security:
+        - OAuth2: []
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
   /users/{userId}:
     get:
       tags:
